# qa-automation

./: .env.example  CNAME  README.md  TODO.md  index.html  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: allure-pages.yml  ci.yml
10/: index.html
10/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
10/export/: influxDbData.txt  prometheusData.txt
10/history/: categories-trend.json  history-trend.json  history.json  retry-trend.json
10/widgets/: behaviors.json  duration-trend.json  duration.json  executors.json  severity.json  summary.json
11/: index.html
11/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
11/export/: influxDbData.txt  prometheusData.txt
11/history/: categories-trend.json  history.json  retry-trend.json
11/widgets/: duration-trend.json  executors.json  history-trend.json  severity.json  status-chart.json  summary.json
12/: index.html
12/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
12/export/: influxDbData.txt  prometheusData.txt
12/history/: duration-trend.json  history-trend.json  history.json
12/widgets/: categories-trend.json  duration.json  executors.json  retry-trend.json  (+3 more)
13/: index.html
14/: index.html
2/: index.html
3/: index.html
4/: index.html
5/: index.html
6/: index.html
7/: index.html
8/: index.html
9/: index.html
last-history/: categories-trend.json  duration-trend.json  history.json
tests/: conftest.py  test_ci_sanity.py
(+342 files in other folders)
